Button alignment corrected

--- a/src/app/chat-bot/chat-bot.component.css
+++ b/src/app/chat-bot/chat-bot.component.css
@@ -24,6 +24,12 @@ mat-card-subtitle {
   font-size: 0.8em !important;
 }
 
+.fa-send {
+  position: absolute;
+  left: 30%;
+  top: 34%;
+}
+
 @media screen and (max-width: 920px) {
   .chat-controls {
     width: 80%;
